Bug 1404003 - Bug 1402750 follow-up: char16_t triggers undesired RFind(). r=aceman